tests/errors/test_57.xpp
// Cannot return value from constructor

class IntBox {
	x: i64;
	pub IntBox(x_: i64) {
		x = x_;
		return x;
	}
}

fn main() void {}
